--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <div>
+    <h1> Видеозвонок</h1>
     <label>Ваш ID: <input id="yourId" value="client1" /></label><br />
     <label>ID партнера: <input id="partnerId" value="client2" /></label><br />
     <button id="startBtn">Начать звонок</button>
