--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <script>
 let ws = new WebSocket('wss://truruky.ru/ws');
   ws.onmessage = (message) => {
-    const message = JSON.parse(message);
+    const m = JSON.parse(message);
     log('Signaling message received:', d);
-    document.getElementById('id1').innerHTML =`${message}`;
+    document.getElementById('id1').innerHTML =`${m}`;
   }
 
 </script>
