--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ let ws = new WebSocket('wss://truruky.ru/ws');
   ws.onmessage = (e) => {
     const d = JSON.parse(e.data); // Здесь d — это объект {type: ..., data: ...}
     
-    document.getElementById('id1').innerHTML =`${d.data}`; 
+    document.getElementById('id1').innerHTML =`${d.data.a}`; 
   }
 
 </script>
