--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <script>
 let ws = new WebSocket('wss://truruky.ru/ws');
   ws.onmessage = (e) => {
-    const d = JSON.parse(e.data); // Здесь d — это объект {type: ..., data: ...}
+    const d = JSON.parse(e.data); // Здесь d — это объект {t1: ..., d1: ..., k1: ...}
     
-    document.getElementById('id1').innerHTML =`${d.data.a}`; 
+    document.getElementById('id1').innerHTML =`${d.d1.a}`; 
   }
 
 </script>
