--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
   <script type="module" src="client.js"></script> -->
   <div id="id1"></div>
+  <div id="id2"></div>
 <script>
 let ws = new WebSocket('wss://truruky.ru/ws');
   ws.onmessage = (e) => {
     const d = JSON.parse(e.data); // Здесь d — это объект {t1: ..., d1: ..., k1: ...}
     
     document.getElementById('id1').innerHTML =`${d.d1.a}`; 
+    document.getElementById('id2').innerHTML =`${d.k1}`;
   }
 
 </script>
