--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ let ws = new WebSocket('wss://truruky.ru/ws');
   ws.onmessage = (e) => {
     const d = JSON.parse(e.data); // Здесь d — это объект {t1: ..., d1: ..., k1: ...}
     
-    document.getElementById('id1').innerHTML =`${d.d1.a}`; 
+    document.getElementById('id1').innerHTML =`${d.d1.a}`; // d1 - объект в объекте d
     document.getElementById('id2').innerHTML =`${d.k1}`;
   }
 
