--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ ws.onmessage = (e) => {
   }
   //*******************************************************************************
   // отправляем сообщение формы по нажатию кнопки
-    document.getElementById('sendButton').addEventListener('click', ()=> {
-    const messageInput =document.getElementById('messageInput').value;
-    ws.send(JSON.stringify({ e: 'greeting', m: messageInput}));
-    });
+    // document.getElementById('sendButton').addEventListener('click', ()=> {
+    // const messageInput =document.getElementById('messageInput').value;
+    // ws.send(JSON.stringify({ e: 'greeting', m: messageInput}));
+    // });
 
 </script>
 
