--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 <script>
   let name = prompt("Введите имя!");
 let ws = new WebSocket('wss://truruky.ru/ws');
+
 ws.onopen = () => {
   console.log('Connected to the WebSocket server');
-  ws.send(JSON.stringify({event: 'greeting', message: 'Hello Server!'}));
+  ws.send(JSON.stringify({e: 'greeting', m: 'Hello Server!'}));
 };
 
 
